[gd_scene load_steps=7 format=3 uid="uid://b1lypvorpy47c"]

[ext_resource type="Script" uid="uid://cnwgqp4m88jkv" path="res://Script/Win_scene.gd" id="1_r7r7f"]
[ext_resource type="Theme" uid="uid://c5mk51k51gcl3" path="res://Themes/button_theme.tres" id="2_18fye"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6p5n"]
bg_color = Color(0, 0, 0, 0.705882)
skew = Vector2(0.2, 0)
border_width_left = 50
border_width_top = 50
border_width_right = 50
border_width_bottom = 50
border_color = Color(0, 0, 0, 0.705882)
border_blend = true

[sub_resource type="Animation" id="Animation_qytio"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a7gyf"]
resource_name = "fadeup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mo8u6"]
_data = {
&"RESET": SubResource("Animation_qytio"),
&"fadeup": SubResource("Animation_a7gyf")
}

[node name="Win_scene" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7r7f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -58.0
offset_right = 77.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c6p5n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerName" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_18fye")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_18fye")
text = "  Restart  "

[node name="BackToMainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_18fye")
text = "  Back  "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mo8u6")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
